Fix overflow-x not being reset when aside is visible above 900px

--- a/examples/simple/src/users/Aside.module.css
+++ b/examples/simple/src/users/Aside.module.css
@@ -8,5 +8,7 @@
     .root {
         width: 200px;
         margin: var(--salt-spacing-100, 1em);
+        overflow-x: visible;
     }
 }
+
